--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>chapter 1 - java optimization</title>
+	<title>Function</title>
 	<meta name="autho" content="chitacan">
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
